ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-02-14 Daniel Andreca
	- GUI:
		* Alias subdomains are not rebuilded on domain property change

2009-02-14 Thomas Häber
	- THEMES:
		* fixes for more valid HTML (ID="..."->id="..."; css-/js-meta-tags for HTML attributes onload="javscript:.." and style="...", CSS-Background-fix)

2009-02-13 Thomas Häber
	- GUI:
		* code cleanup / coding style (PHP + included SQL)
		* optimized a lot of control structures (e.g. replaced some slow and hugh loops with internal php functions, or replaced hugh if-else structures with short ?: structure)
		* some fixes (e.g. for more valid HTML output)
		* fix typos in PHP comments
	- ENGINE:
		* typos in STDERR-output of perl db script
	- THEMES:
		* fixes for more valid HTML (workaround for confusing screenwidth thing)

2009-02-12 Daniel Andreca
	- ENGINE:
		* Updated update script

2009-02-12 Thomas Häber
	- THEMES:
		* typo (missing point) in domain_default_page/index.html
		* more information with explicit naming of error code in errordocs title, removed ugly capitalized ERROR to Error
		* extern javascript file in errordocs (errordocs.js) does not need CDATA area
		* replaced separated robots-meta-tag with one meta-tag (it's default to use 'nofollow, noindex' in one meta-tag), furthermore this means less code
		* added new line at end of some template-files (cause IDE and Subversion complains about it too often, and I am of suck of it), unfortunately not all now (includes some code cleanup)
		* removed javascript-tag in header of public sites like login and password tpls, they don't use it: less code + less HTTP requests -> less traffic -> less log-entries
	- GUI:
		* typos in some php files and some code cleanup
		* removed useless if-clause-block in include/admin-functions.php and include/client-functions.php

2009-02-09 Benedikt Heintel
	- CONFIGS:
		* Release preparation
	- DOCU:
		* Updated for ispCP ω 1.0.0
	- ENGINE: