@@ -117,10 +117,10 @@ if (Config::get('DUMP_GUI_DEBUG'))
 function get_pageone_param() {
 	global $dmn_name;
 	global $dmn_chp;
-	global $dmn_pt;
 
 	if (isset($_SESSION['dmn_name'])){
 		$dmn_name = $_SESSION['dmn_name'];
+		$dmn_chp = $_SESSION['dmn_tpl'];
 	} else {
 		return false;
 	}
